src/test/resources/Parser/SyntaxErrors/IncompatibleTypesWhile.front
class A:
    test (b: bool[][]) {
        while(b[1]){}
    }